Add the second chapter in russian

--- a/books/ära-kasva-suureks/2.ee.md
+++ b/books/ära-kasva-suureks/2.ee.md
@@ -21,6 +21,6 @@ Hoolimata Rihanna palvetest oli ta ema algul vastu. Rihanna ema leebus alles hil
 
 Kui Rihanna oli veel tundmatu tüdruk väikeselt ja vaeselt Barbadose saarelt, siis ei keskendunud ta sellele, et ta kodune elu on halb, vaid otsis innukalt, mida ta saaks teha. Samuti ei teinud ta suuri plane ega kulutanud kogu aega unistamisele voi planeerimisele. Ta elas lapselikult hetkes ja keskendus laulmisele. Ta ei laulnud selleks, et keegi soovitas tal seda teha, või et sellega ilmtingimata midagi saavutada. Eelkõige laulis ta seetõttu, et ta lihtsalt nautis seda üle kõige maailmas.
 
-Nagu ta ise ütleb: "Kui sa mõistad, kellele sa elad ja kellele on oluline meele järele olla, siis päljud inimesed tegelikult alustavad elamist. Ma ei kavatse kunagi sellesse takerduda. Ma vaatan tagasi oma elule ja ütlen, et ma nautisin seda - ja elasin iseendale."
+Nagu ta ise ütleb: "Kui sa mõistad, kellele sa elad ja kellele on oluline meele järele olla, siis paljud inimesed tegelikult alustavad elamist. Ma ei kavatse kunagi sellesse takerduda. Ma vaatan tagasi oma elule ja ütlen, et ma nautisin seda - ja elasin iseendale."
 
 "MA OOTAN TÕELISE PÕNEVUSEGA, MIDA ELU MULLE TOOB." Robyn Rihanna Fenty
