--- a/books/ära-kasva-suureks/2.ru.md
+++ b/books/ära-kasva-suureks/2.ru.md
@@ -9,18 +9,18 @@
 
 Рианне уже с раннего детства нравилось петь дома про себя. Это довольно распространено в культуре Барбадоса. Она была замкнутым ребенком, а музыка - ее способом самовыражения. Она пела постоянно - своим родственникам, плюшевым мишкам, даже подушкам - и мечтала, что однажды станет звездой.
 
-Хотя ее вокальные способности проявились довольно рано, первые 15 лет ее жизни и пения не являются экстраординарными. Заниматься музыкой она начала просто для собственного удовольствия, или например часто выступала с друзьями в шокле. После развода родителей застенчивая девочка-подросток, чтобы уйти от домашних проблем, начала все больше заниматься пением. В 15 лет она с двумя одноклассницами организовала ансамбль.
+Хотя ее вокальные способности проявились довольно рано, первые 15 лет ее жизни и пения не являются экстраординарными. Заниматься музыкой она начала просто для собственного удовольствия, или например часто выступала с друзьями в школе. После развода родителей застенчивая девочка-подросток, чтобы уйти от домашних проблем, начала все больше заниматься пением. В 15 лет она с двумя одноклассницами организовала ансамбль.
 
-Ühel heal päeval veetis saarel oma puhkust New Yorgis töötav muusikaprodutsent Evan Rogers. Kuna Rogersi abikaasa Jackie on Barbadoselt pärit, siis on ta saarel üsna sage külaline. "Ma olen alati seal ja inimesed teavad, et ma olen muusikaprodutsent ja laulukirjutaja, niisis igaüks teab kedagi, kes tahab mulle oma esinemist näidata," ütleb ta. Nii juhtus ka seekord, 2004. aastal.
+Однажды на острове проводил свой отпуск музыкальный продюсер из Нью Йорка Эван Роджерс. Поскольку Джеки, жена Роджерса, родом с Барбадоса, он довольно часто гостил на острове. "Я постоянно там, и все знают, что я продюсер и композитор, поэтому у каждого есть кто-то, кто хочет выступить передо мной", - говорит он. Так случилось и в тот раз в 2004 году.
 
-Ühiste tuttavate kaudu sai kokku lepitud Rihanna ja ta sõbrannade esinemine. "Üks neist oli Robyn Fenty ja ta paistis teiste seast silma," meenutab Rogers saatuslikku kohtumist, "hetkest, kui ta saali astus, koondus kogu tähelepanu temale." Muusikaprodutsent Evan Rogers palus Rihannal järgmisel päeval ilma sõbrannadeta tagasi tulla ning kutsus teda koos emaga elama enda juurde Stamfordi Ameerikasse, kavatsusega teha temast staar.
+Через одного общего знакомого Риханна и ее подруги договорились о выступлении. "Одной из них была Риханна Фенти, и она выделялась на фоне других", вспоминает Роджерс ту роковую встречу. Как только она вошла в зал, все внимание было сосредоточено на ней." Музыкалный продюсер Эван Роджерс попросил Риханну на следующий день вернуться без подруг и пригласил ее с матерью жить у себя в Стенфорде в Америке, намереваясь сделать из нее звезду.
 
-Hoolimata Rihanna palvetest oli ta ema algul vastu. Rihanna ema leebus alles hiljem, kui sai teada, et Evani naine on Barbadoselt pärit. Vähem kui aasta hiljem koliski vaid 16-aastane Rihanna Evan Rogersi ja tema naise juurde Connecticuti ning hakkas oma demoalbumiga tööle.
+Несмотря на мольбы Риханны, ее мать вначале была против. Но позже она смягчилась, узнав, что жена Эвана родом с Барбадоса. Менее чем через год переехала 16-летняя Риханна к Эвану Роджерсу и его жене в Коннектикут и начала работать над своим демо альбомом.
 
-"Kui ma lahkusin Barbadoselt, siis ma ei vaadanud tagasi," meenutab Rihanna. "Ma tahtsin teha, mida ma pidin tegema, isegi kui see tähendaks Ameerikasse kolimist." Evanist ja Jackiest said ujedale Rihannale justkui teised vanemad. Koos äripartner Carl Sturkeniga lindistas Evan Rihanna esimese demo ning edasine on juba ajalugu - Rihannast sai rahvusvaheline R&B megastaar.
+"С тех пор, как я уехала с Барбадоса, я не смотрела назад", вспоминает Риханна. "Я хотела делать то, что должна делать, даже если это означало переезд в Америку." Эван и Джеки стали застенчивой Риханне почти вторыми родителями. Вместе с партнером по бизнесу Карлом Стуркеном Эван Риханна записала первое демо, а дальнейшее это уже история - Риханна стала меджународной R&B мегазвездой.
 
-Kui Rihanna oli veel tundmatu tüdruk väikeselt ja vaeselt Barbadose saarelt, siis ei keskendunud ta sellele, et ta kodune elu on halb, vaid otsis innukalt, mida ta saaks teha. Samuti ei teinud ta suuri plane ega kulutanud kogu aega unistamisele voi planeerimisele. Ta elas lapselikult hetkes ja keskendus laulmisele. Ta ei laulnud selleks, et keegi soovitas tal seda teha, või et sellega ilmtingimata midagi saavutada. Eelkõige laulis ta seetõttu, et ta lihtsalt nautis seda üle kõige maailmas.
+Когда Риханна была еще никому не известной девочкой с бедного маленького острова Барбадос, она не концентрировалась на том, как плоха ее жизнь, однако усердно искала, что она может сделать. Также не строила она больших планов и не проводила все время в мечтах и за строительством планов. Она жила текущим моментом и концентрировалась на пении. Она пела не потому, что кто-то посоветовал ей этим заняться, или чтобы непременно чего-то достичь. Прежде всего она пела потому, что наслаждалась этим больше всего на свете.
 
-Nagu ta ise ütleb: "Kui sa mõistad, kellele sa elad ja kellele on oluline meele järele olla, siis päljud inimesed tegelikult alustavad elamist. Ma ei kavatse kunagi sellesse takerduda. Ma vaatan tagasi oma elule ja ütlen, et ma nautisin seda - ja elasin iseendale."
+Как она сама утверждает: "Для многих людей жизнь начинается с понимания, для кого они живут, и кому нужно нравиться. Я никогда не хотела впутываться в это. Я оглядываюсь на свою жизнь и считаю, что всегда наслаждалась ей и жила исключительно для себя".
 
 "Я с большим интересом жду, что мне преподнесет жизнь." Робин Рианна Фенти.
