Add the second chapter in russian

--- a/books/ära-kasva-suureks/2.ru.md
+++ b/books/ära-kasva-suureks/2.ru.md
@@ -13,13 +13,13 @@
 
 Однажды на острове проводил свой отпуск музыкальный продюсер из Нью Йорка Эван Роджерс. Поскольку Джеки, жена Роджерса, родом с Барбадоса, он довольно часто гостил на острове. "Я постоянно там, и все знают, что я продюсер и композитор, поэтому у каждого есть кто-то, кто хочет выступить передо мной", - говорит он. Так случилось и в тот раз в 2004 году.
 
-Через одного общего знакомого Риханна и ее подруги договорились о выступлении. "Одной из них была Риханна Фенти, и она выделялась на фоне других", вспоминает Роджерс ту роковую встречу. Как только она вошла в зал, все внимание было сосредоточено на ней." Музыкалный продюсер Эван Роджерс попросил Риханну на следующий день вернуться без подруг и пригласил ее с матерью жить у себя в Стенфорде в Америке, намереваясь сделать из нее звезду.
+Через одного общего знакомого Рианна и ее подруги договорились о выступлении. "Одной из них была Рианна Фенти, и она выделялась на фоне других", вспоминает Роджерс ту роковую встречу. Как только она вошла в зал, все внимание было сосредоточено на ней." Музыкальный продюсер Эван Роджерс попросил Рианну на следующий день вернуться без подруг и пригласил ее с матерью жить у себя в Стенфорде в Америке, намереваясь сделать из нее звезду.
 
-Несмотря на мольбы Риханны, ее мать вначале была против. Но позже она смягчилась, узнав, что жена Эвана родом с Барбадоса. Менее чем через год переехала 16-летняя Риханна к Эвану Роджерсу и его жене в Коннектикут и начала работать над своим демо альбомом.
+Несмотря на мольбы Рианны, ее мать вначале была против. Но позже она смягчилась, узнав, что жена Эвана родом с Барбадоса. Менее чем через год переехала 16-летняя Рианна к Эвану Роджерсу и его жене в Коннектикут и начала работать над своим демо альбомом.
 
-"С тех пор, как я уехала с Барбадоса, я не смотрела назад", вспоминает Риханна. "Я хотела делать то, что должна делать, даже если это означало переезд в Америку." Эван и Джеки стали застенчивой Риханне почти вторыми родителями. Вместе с партнером по бизнесу Карлом Стуркеном Эван Риханна записала первое демо, а дальнейшее это уже история - Риханна стала меджународной R&B мегазвездой.
+"С тех пор, как я уехала с Барбадоса, я не смотрела назад", вспоминает Рианна. "Я хотела делать то, что должна делать, даже если это означало переезд в Америку." Эван и Джеки стали застенчивой Рианне почти вторыми родителями. Вместе с партнером по бизнесу Карлом Стуркеном Эван Рианна записала первое демо, а дальнейшее это уже история - Рианна стала международной R&B мега звездой.
 
-Когда Риханна была еще никому не известной девочкой с бедного маленького острова Барбадос, она не концентрировалась на том, как плоха ее жизнь, однако усердно искала, что она может сделать. Также не строила она больших планов и не проводила все время в мечтах и за строительством планов. Она жила текущим моментом и концентрировалась на пении. Она пела не потому, что кто-то посоветовал ей этим заняться, или чтобы непременно чего-то достичь. Прежде всего она пела потому, что наслаждалась этим больше всего на свете.
+Когда Рианна была еще никому не известной девочкой с бедного маленького острова Барбадос, она не концентрировалась на том, как плоха ее жизнь, однако усердно искала, что она может сделать. Также не строила она больших планов и не проводила все время в мечтах и за строительством планов. Она жила текущим моментом и концентрировалась на пении. Она пела не потому, что кто-то посоветовал ей этим заняться, или чтобы непременно чего-то достичь. Прежде всего она пела потому, что наслаждалась этим больше всего на свете.
 
 Как она сама утверждает: "Для многих людей жизнь начинается с понимания, для кого они живут, и кому нужно нравиться. Я никогда не хотела впутываться в это. Я оглядываюсь на свою жизнь и считаю, что всегда наслаждалась ей и жила исключительно для себя".
 
