Add the third chapter in Russian (partially translated)

--- a/books/ära-kasva-suureks/3.ru.md
+++ b/books/ära-kasva-suureks/3.ru.md
@@ -1,6 +1,6 @@
-## TÄISKASVANUD TÖÖTAVAD, LAPSED MÄNGIVAD
+## Взрослые работают, дети играют
 
-Täiskasvanud usuvad, et kõvasti ja kaua töötamine viib neid nende eesmärgi täitumiseni. Tegelikkus on aga hoopis vastupidine. Sa peaksid keskenduma hoopis sellele, et sinu töö oleks sulle piisavalt meeldiv, nagu mäng lapsele. Eranditult kõikide edukate inimeste edu valem seisneb selles, et nad naudivad enda tööd. Kui inimene töötaks päevas 14 tundi, ja seda lausa 10 aastat järjest, siis ikkagi ei saavutaks ta mitte mingisugustki edu, kui tal puudub huvi selle valdkonna vastu. Seda on tõestanud paljud näited elust enesest.
+Взрослые верят, что долгая и усердная работа поможет им достичь целей. Реальность же совершенно противоположна. Ты должен вместо этого сосредоточиться на том, чтобы работа стала достаточно привлекательной, как игра для ребенка. Формула успеха всех без исключения успешных людей состоит в том, чтобы получать удовольствие от работы. Если бы человек работал по 14 часов в день 10 лет подряд, то он почти наверняка ничего бы не достиг, поскольку полностью потерял интерес к своей сфере деятельности. Это доказывают многочисленные примеры из жизни.
 
 Vaata enda ümber ringi. Kõikjal näed sa inimesi, kes on keskpärased, õnnetud ja kes ei naudi oma tööd. Nad ei saavuta vähimatki edu! Nad lihtsalt teevad oma tööd - kireta, keskpäraselt, tuimalt. Nad pole kunagi palju vaeva näinud, et mõelda, millist tööd nad tegelikult teha tahaksid. 
 
@@ -19,4 +19,4 @@ tahtnud sa veel pissile minna.
 
 Kui sa ka täiskasvanuna tunned vetsus istudes, et sa pead kohe-kohe kiirustama tagasi tööle, kuna pooleli jäi midagi põnevat ja huvitavat, siis oled sa leidnud enda jaoks õige töö. Kui sa pole kunagi tundnud sellist põnevust, siis peaksid mõtlema, kas töö, mida teed, on ikka sinu jaoks kõige õigem. Soovitan sul otsida ja mitte lõpetada enne, kuni oled leidnud sellise töö. Elu on mäng, mängi seda!
 
-Täiskasvanud arvavad, et töö on mingi sundtegevus, mis tuleb lihtsalt ära kannatada. Õnnelikud ja edukad inimesed ei tööta päevagi oma elus, sest nende töö on kui mäng lastele - nad töötavad ennastunustavalt, kirglikult ja täie hingega.
+Взрослые думают, что работа это некое вынужденное дело, которое просто нужно терпеть. Счастливые успешные люди не работают ни дня в своей жизни, потому что для них работа как игра для ребенка - они работают самозабвенно, страстно и со всей душой.
