Add the third chapter in Russian (partially translated)

--- a/books/ära-kasva-suureks/3.ru.md
+++ b/books/ära-kasva-suureks/3.ru.md
@@ -2,13 +2,13 @@
 
 Взрослые верят, что долгая и усердная работа поможет им достичь целей. Реальность же совершенно противоположна. Ты должен вместо этого сосредоточиться на том, чтобы работа стала достаточно привлекательной, как игра для ребенка. Формула успеха всех без исключения успешных людей состоит в том, чтобы получать удовольствие от работы. Если бы человек работал по 14 часов в день 10 лет подряд, то он почти наверняка ничего бы не достиг, поскольку полностью потерял интерес к своей сфере деятельности. Это доказывают многочисленные примеры из жизни.
 
-Vaata enda ümber ringi. Kõikjal näed sa inimesi, kes on keskpärased, õnnetud ja kes ei naudi oma tööd. Nad ei saavuta vähimatki edu! Nad lihtsalt teevad oma tööd - kireta, keskpäraselt, tuimalt. Nad pole kunagi palju vaeva näinud, et mõelda, millist tööd nad tegelikult teha tahaksid. 
+Оглянись вокруг. Мир полон ординарных людей, которые несчастны и не получают удовольствия от своей работы. Они не станут особенно успешны. Они просто делают свою работу, неспеша, посредственно, равнодушно. Они никогда не прикладывали достаточно усилий, чтобы разобраться, чем им действительно хотелось бы заниматься. 
 
-Saladus ei seisne asjaolus, et kui töötad kauem ja rohkem, siis tabab sind edu. Võti on hoopis selles, et oma aega ja energiat tuleb kulutada otsimisele - saamaks teada, mis sulle väga meeldib. Sa peaksid valima oma tööd samamoodi, nagu laps valib omale tegevusi - ta ei tegele igava mänguga, ta tahab mängida põnevat mängu!
+Секрет заключается не в том, что тебя ждет успех, если работать больше и дольше. Наоборот, ключ в том, чтобы свое время и энергию потратить на поиски и понимание, что тебе нравится. Ты должен выбирать работу как выбирает себе занятие ребенок - он не играет со скучными игрушками, он хочет играть в увлекательную игру.
 
-Kui oled kord sellise tegevuse leidnud, sis ei pea sa sisuliselt päevagi enam töötama, vaid saad hakata mängima nagu laps. Selle kõige juures on parim veel see, et töö, mida sa tõeliselt oskad, mille vastu sul on sügav huvi ja mida sa naudid, selles suudad sa saavutada kõige väljapaistvamaid tulemusi! Sinu enda võimete juures, ma mõtlen. Sest ära unusta, et meist kõigist ei saa ilmselt maailmakuulsaid leiutajaid, geniusi ja popstaare. Me peame mängima nende kaartidega, mis meile sünnihetkel kätte jagati.
+Если ты найдешь такое дело, то тебе больше не придется работать ни дня, а сможешь вместо этого играть как ребенок. И лучшее всего еще то, что дело, в котором ты действительно разбираешься, к которому у тебя есть глубочайший интерес, и от которого ты получаешь удовольствие, в нем ты сможешь достичь и самого выдающегося результата. Из всех возможных вариантов, конечно. Потому что не стоит забывать, что не все из нас, очевидно, могут стать всемирно известными изобретателями, гениями или поп-звездами. Нам приходится играть теми картами, которые нам выдали при рождении.
 
-Ma ei taha, et sa piiraksid ennnast asjatult liiga kõrgete või liiga madalate eesmärkidega. Kumbki variant ei ole hea. Liga kõrged eesmärgid tekitavad frustratsiooni ja liiga madalad eesmärgid tüdimust. Kõige tervislikum ja tulemuslikum on lasta elul ennast kanda, täpselt nagu lapsed usaldavad praegust hetke. Ja siis tuleb võtta nendest hetkedest maksimum. Mängigem iga hetk seda tööd, mis meile nii väga meeldib!
+Не хочу, чтобы ты напрасно ограничивал себя ни завышенными, ни заниженными целями. Оба варианта плохие. Слишком высокие цели вызывают фрустрацию, а слишком низкие - скуку. Наиболее здоровый и результативный вариант это позволить жизни вести себя, точно как дети доверяют выбор текущему моменту. А затем нужно получить от него максимум. Превращая каждую минуту работы в игру, которая нам очень нравится.
 
 Täiskasvanuna jääb meie motlemine kinni mallidesse. Ükskord tuleb kätte hetk, mil arutleme väga targalt ja kainelt küsimuse üle, mis eriala oleks pisavalt tõsiseltvõetav ning jälgime maailmas hetkel kõige populaarsemaid trende jne. Täiskasvanuid huvitab kogukonna respekteering. Kindlasti on maailma rikides erinevad tavad, kuid tavaliselt peetakse heaks karjäärivalikuks ärijuhi, arsti, juristi ametit või muud seesugust. Aga see on ainult ühiskonna ootus. Kui sa tahad kogukonnale tõeliselt meeldida, siis peaksid olema täielikult sina ise! Leia just selline tegevus, mis sind endasse haarab, isegi kui see läheb vastuollu hetke trendidega.
 
