Add the third chapter in Russian (partially translated)

--- a/books/ära-kasva-suureks/3.ru.md
+++ b/books/ära-kasva-suureks/3.ru.md
@@ -14,9 +14,8 @@ Täiskasvanuna jääb meie motlemine kinni mallidesse. Ükskord tuleb kätte het
 
 Kui sa suhtud oma töösse tõelise kirega, void ka ise uue trendi kujundada. Kõige rohkem tunnustust saab sulle osaks ainult siis, kui leiad töö, mis on sinu jaoks sama põnev kui mäng lapse jaoks. Muidugi peab sinu töö olema ka inimestele või firmadele kasulik, sest muidu ei maksta sulle selle eest ka raha. Kindlasti käivad selle kõige juures käsikäes kaks asja - vajadus sinu töö järele ja tasu selle eest. Nii et mida rohkem sa mängid ja mida paremini see sul välja tuleb, seda rohkem hakkad saama ka raha. Sa veedad töö juures suurema osa oma ärkvel oldud ajast. Sa ei saa endale lubada olukorda, et teed sellist tööd, mis sulle tegelikult ei meeldi. See tähendab ju seda, et valdav osa sinu elust pole muud kui õnnetu! See oleks lihtsalt lubamatu ja kurb!
 
-Kas mäletad lapsena neid momente, mil parasjagu oli pooleli mingi eriti põnev mäng. Tol hetkel oli elu niivõrd põnev, et isegi WC-sse minek tundus ajaraiskamisena ja sa lükkasid seda võib-olla edasi, niipalju kui suutsid. Häda oli juba päris suur, aga ikkagi ei
-tahtnud sa veel pissile minna.
+Помнишь те моменты из детства, когда ты был в процессе особенно увлекательной игры. В тот момент жизнь была настолько увлекательной, что даже поход в туалет ощущался как потеря времени, и ты откладывал его еще и еще, столько, сколько мог вытерпеть. Нужда уже была довольно большой, но ты, тем не менее, все не хотел идти в туалет.
 
-Kui sa ka täiskasvanuna tunned vetsus istudes, et sa pead kohe-kohe kiirustama tagasi tööle, kuna pooleli jäi midagi põnevat ja huvitavat, siis oled sa leidnud enda jaoks õige töö. Kui sa pole kunagi tundnud sellist põnevust, siis peaksid mõtlema, kas töö, mida teed, on ikka sinu jaoks kõige õigem. Soovitan sul otsida ja mitte lõpetada enne, kuni oled leidnud sellise töö. Elu on mäng, mängi seda!
+Если ты во взрослом возрасте продолжаешь чувствовать, сидя в туалете, что хочешь как можно скорее вернуться к работе, потому что нечто интересное и увлекательное осталось незаконченным, то ты нашел правильную работу. Если ты никогда не чувствовал подобного возбуждения, то стоит задуматься, действительно ли твоя работа подходит тебе больше всего. Советую тебе искать и не останавливаться, пока не найдешь такую. Жизнь это игра, играй в нее.
 
 Взрослые думают, что работа это некое вынужденное дело, которое просто нужно терпеть. Счастливые успешные люди не работают ни дня в своей жизни, потому что для них работа как игра для ребенка - они работают самозабвенно, страстно и со всей душой.
