--- a/books/ära-kasva-suureks/3.ru.md
+++ b/books/ära-kasva-suureks/3.ru.md
@@ -12,7 +12,7 @@
 
 Täiskasvanuna jääb meie motlemine kinni mallidesse. Ükskord tuleb kätte hetk, mil arutleme väga targalt ja kainelt küsimuse üle, mis eriala oleks pisavalt tõsiseltvõetav ning jälgime maailmas hetkel kõige populaarsemaid trende jne. Täiskasvanuid huvitab kogukonna respekteering. Kindlasti on maailma rikides erinevad tavad, kuid tavaliselt peetakse heaks karjäärivalikuks ärijuhi, arsti, juristi ametit või muud seesugust. Aga see on ainult ühiskonna ootus. Kui sa tahad kogukonnale tõeliselt meeldida, siis peaksid olema täielikult sina ise! Leia just selline tegevus, mis sind endasse haarab, isegi kui see läheb vastuollu hetke trendidega.
 
-Kui sa suhtud oma töösse tõelise kirega, void ka ise uue trendi kujundada. Kõige rohkem tunnustust saab sulle osaks ainult siis, kui leiad töö, mis on sinu jaoks sama põnev kui mäng lapse jaoks. Muidugi peab sinu töö olema ka inimestele või firmadele kasulik, sest muidu ei maksta sulle selle eest ka raha. Kindlasti käivad selle kõige juures käsikäes kaks asja - vajadus sinu töö järele ja tasu selle eest. Nii et mida rohkem sa mängid ja mida paremini see sul välja tuleb, seda rohkem hakkad saama ka raha. Sa veedad töö juures suurema osa oma ärkvel oldud ajast. Sa ei saa endale lubada olukorda, et teed sellist tööd, mis sulle tegelikult ei meeldi. See tähendab ju seda, et valdav osa sinu elust pole muud kui õnnetu! See oleks lihtsalt lubamatu ja kurb!
+Если ты относишься к своей работе с неподдельной страстью, то можешь и сам задавать тренды. Больше всего признания ты получишь только тогда, когда найдешь работу столь же увлекательную, как игра для ребенка. Конечно, твоя работа должна быть полезна людям или компании, поскольку в противном случае никто не заплатит за нее. Определенно потребность в работе и плата за нее всегда ходят рука об руку. Так как чем больше ты играешь и чем лучше у тебя выходит, тем больше ты начинаешь зарабатывать. Ты проводишь на работе большую часть своего активного времени. Ты не можешь позволить себе делать работу, которая тебе на самом деле не нравится. Ведь это означало бы, что подавляющая часть твоей жизни несчастна. И это просто грустно и недопустимо.
 
 Помнишь те моменты из детства, когда ты был в процессе особенно увлекательной игры. В тот момент жизнь была настолько увлекательной, что даже поход в туалет ощущался как потеря времени, и ты откладывал его еще и еще, столько, сколько мог вытерпеть. Нужда уже была довольно большой, но ты, тем не менее, все не хотел идти в туалет.
 
