Add the fourth chapter

--- a/books/ära-kasva-suureks/4.ee.md
+++ b/books/ära-kasva-suureks/4.ee.md
@@ -1,7 +1,7 @@
 ## LUGU LAPSELIKULT MÄNGIMISEST
 ## Thomas A. Edison
 
-Õigupoolest räägib see lugu Thomas A. Edisoni vanematest. Kui väike Edison oli alles seitsmeaastane, märkasid ta vanemad, et poiss on väga eriline ja andekas. Thomasele meeldis kõikidelt täiskasvanutelt, kellega ta kokku puutus, küsida palju küsimusi igasuguste nähtuste tekkepõhjuste kohta. Samuti meeldis talle palju lugeda. Sellest hoolimata pidas õpetaja G. B. Engle teda rumalaks, kuna poisile ei meeldinud matemaatika ning ta küsis liga palju küsimusi. Tol ajal ei olnud kooliõpilastel lubatud esitada küsimusi. Pärast kolme kuud koolis käimist nimetas õpetaja Thomast hälvikuks (inglise keeles: addled), mispeale ema Nancy Edison läks kooli petajaga rääkima. Õpetaja selgitas, et Thomas lihtsalt ei keskendu ja ei suuda õppida.
+Õigupoolest räägib see lugu Thomas A. Edisoni vanematest. Kui väike Edison oli alles seitsmeaastane, märkasid ta vanemad, et poiss on väga eriline ja andekas. Thomasele meeldis kõikidelt täiskasvanutelt, kellega ta kokku puutus, küsida palju küsimusi igasuguste nähtuste tekkepõhjuste kohta. Samuti meeldis talle palju lugeda. Sellest hoolimata pidas õpetaja G. B. Engle teda rumalaks, kuna poisile ei meeldinud matemaatika ning ta küsis liga palju küsimusi. Tol ajal ei olnud kooliõpilastel lubatud esitada küsimusi. Pärast kolme kuud koolis käimist nimetas õpetaja Thomast hälvikuks (inglise keeles: addled), mispeale ema Nancy Edison läks kooli õpetajaga rääkima. Õpetaja selgitas, et Thomas lihtsalt ei keskendu ja ei suuda õppida.
 
 Õnneks olid väikese Edisoni vanemad väga lapseliku suhtumisega. Õpetaja jutu peale otsustas Thomase ema Nancy, et hakkab oma poega edaspidi hoopis kodus õpetama. Poiss oli selleks ajaks koolis käinud kõigest kolm kuud. Vanemad olid väga pühendunud tema arendamisele. Nad ei sundinud poega õppima asju, mida ta ei nautinud. Nii saigi väike Edison keskenduda ainult sellele, mis teda tõeliselt huvitas.
 
