--- a/books/ära-kasva-suureks/4.ru.md
+++ b/books/ära-kasva-suureks/4.ru.md
@@ -1,7 +1,7 @@
 ## История о детской игре
 ## Томас А. Эдисон
 
-Õigupoolest räägib see lugu Thomas A. Edisoni vanematest. Kui väike Edison oli alles seitsmeaastane, märkasid ta vanemad, et poiss on väga eriline ja andekas. Thomasele meeldis kõikidelt täiskasvanutelt, kellega ta kokku puutus, küsida palju küsimusi igasuguste nähtuste tekkepõhjuste kohta. Samuti meeldis talle palju lugeda. Sellest hoolimata pidas õpetaja G. B. Engle teda rumalaks, kuna poisile ei meeldinud matemaatika ning ta küsis liga palju küsimusi. Tol ajal ei olnud kooliõpilastel lubatud esitada küsimusi. Pärast kolme kuud koolis käimist nimetas õpetaja Thomast hälvikuks (inglise keeles: addled), mispeale ema Nancy Edison läks kooli petajaga rääkima. Õpetaja selgitas, et Thomas lihtsalt ei keskendu ja ei suuda õppida.
+На самом деле это история о родителях Томаса Эдисона. Родители обратили внимание, что мальчик очень особенный и одаренный, еще когда маленькому Эдисону было семь. Томасу нравилось задавать множество вопросов о причинах возникновения всевозможных явлений всем взрослым, которые ему встречались. Также ему очень нравилось читать. Несмотря на это учитель Г. Б. Энгле считал его глупым, поскольку мальчику не нравилась математика, и он задавал слишком много вопросов. В то время ученикам в школе не разрешалось задавать вопросы. Через три месяца учитель Томаса назвал его ребенком с отклонениями, после чего мама, Нэнси Эдисон, пошла в школу поговорить с учителем. Учитель объяснил, что Томас просто неспособен концентрироваться и учиться.
 
 Õnneks olid väikese Edisoni vanemad väga lapseliku suhtumisega. Õpetaja jutu peale otsustas Thomase ema Nancy, et hakkab oma poega edaspidi hoopis kodus õpetama. Poiss oli selleks ajaks koolis käinud kõigest kolm kuud. Vanemad olid väga pühendunud tema arendamisele. Nad ei sundinud poega õppima asju, mida ta ei nautinud. Nii saigi väike Edison keskenduda ainult sellele, mis teda tõeliselt huvitas.
 
