--- a/kodutöö/20240613.md
+++ b/kodutöö/20240613.md
@@ -1,6 +1,6 @@
 # Kodutöö 2024-06-13
 
-### Koosta laused määrsõnadega.
+### Koosta laused määrsõnadega (составь предложения с наречиями)
 
 1. alasti (голышом) - Väikestel saartel käiakse alasti ujumas.
 2. halvasti (плохо) - Halvasti tehtud tööd võtab alati kaua aega parandada.
