--- a/kodutöö/20240624.md
+++ b/kodutöö/20240624.md
@@ -2,7 +2,7 @@
 
 ### Sõnapesad (словообразование)
 
-ÕNN (счастье), ÕNNELIK (счастливый), ÕNNETUS (несчастный случай), ÕNNE SOOVIMA (поздравлять, пожелать счастья), ÕNNESOOV (поздравление, пожелание счастья), ÕNNELIKULT (счастливо), ÕNNITLEMA (поздравлять), ÕNNITLUS (поздравление, приветствие, пожелание счастья)
+Õnn (счастье), õnnelik (счастливый), õnnetus (несчастный случай), õnne soovima (поздравлять, пожелать счастья), õnnesoov (поздравление, пожелание счастья), õnnelikult (счастливо), õnnitlema (поздравлять), õnnitlus (поздравление, приветствие, пожелание счастья)
 
 1. **Soovitan** sulle palju **õnne** ja tervist.
 2. Nad elasid **õnnelikult** elu lõpuni.
@@ -18,7 +18,7 @@
 12. Kas seda **õnnetust** oleks saanud ära hoida?
 13. Mis on **õnneliku** elu saladus?
 
-TÄHT (звезда, буква), TÄHTIS (важный), TÄHTSUS (важность), TÄHTPÄEV (праздник, знаменательная дата), TÄHTAEG (срок), TÄHISTAMA (отмечать)
+Täht (звезда, буква), tähtis (важный), tähtsus (важность), tähtpäev (праздник, знаменательная дата), tähtaeg (срок), tähistama (отмечать)
 
 1. Sellel pole mingit **tähtsust**. 
 2. Kuidas te oma pulma-aastapäeva **olete tähistanud**?
@@ -30,7 +30,7 @@ TÄHT (звезда, буква), TÄHTIS (важный), TÄHTSUS (важнос
 8. Mis on sinu elus kõige **tähtsamad** numbrid?
 9. Istusime lõkke ääres ja vaatasime **tähti**.
 
-PIDU (праздник), PIDU PIDAMA (устраивать праздник), PIDULIK (торжественный), PIDUTSEMA (веселиться),PIDUSTUSED (празднества)
+Pidu (праздник), pidu pidama (устраивать праздник), pidulik (торжественный), pidutsema (веселиться), pidustused (празднества)
 
 1. Me **pidutsesime** hommikuni.
 2. Võitjad kutsuti **pidulikule** vastuvõtule.
