Add the zero chapter

--- a/books/ära-kasva-suureks/0.ee.md
+++ b/books/ära-kasva-suureks/0.ee.md
@@ -11,38 +11,33 @@ Teinekord ümbritseks meid justkui mingi negatiivse suhtumise pilv - kõik veab 
 
 Sellest, kuidas jõuda nii-öelda õigele lainele, kus me kogeme õnnetunnet ja liigume oma unistuste täitmise suunas, rägivad pajud enesemotiveermise raamatud. Miks siis oli vaja kirjutada veel iks raamat? Sellepärast, et minu arvates räägivad paljud õnneliku-eluraamatud väga õiget juttu, kuid enamus neist ajavad lihtsa asja liiga keeruliseks - olles mõne sellise läbi lugenud, võime loetuga küll nõus olla, kuid oleme veel suuremas segaduses, kui enne raamatu kätte võtmist. 
 
-Hea nouanne või teooria on alati lühike, mitte pikk, sest pikast ja laialivalguvast teooriast ei jää meile see köige tähtsam ja philisem
-sonum meelde. Käesolev raamat annab sulle vaid kolmesonalise soovituse, kuidas olla onnelik: „Ara kasva suureks"
-• Raamat selgitab
-selle môtte igakülgselt lahti, et sa möistaksid täielikult seda lihtsat ja
-meeldejäävat sonumit. Iga peatükk arutleb ühe konkreetse lapseliku
-ja täiskasvanuliku suhtumise erinevuse üle ning peatükkide lõpus on
-lugu maailma ajalugu muutnud inimesest, kes koik on kasutanud
-lapselikku suhtumist, näiteks Robert De Niro, Abraham Lincoln, Leonardo da Vinci, Oprah, John Lennon ja Steve Jobs.
-Olen kogu oma teadliku elu uurinud erinevusi onnelike ja onne-
-tute inimeste vahel. Ma kinnitan sulle absoluutse veendumusega, et suhtumine on ainus, mis meid onnelikuks või onnetuks teeb. Ning see on ainult hea, sest see tähendab, et meie endi võimuses on tosta oma onnetset ja elu kvaliteeti. Koik onnelikud inimesed kasutavad
-kas alateadlikult vi teadlikult lapselikku suhtumist.
-Siin raamatus on 40 näidet kõikvoimalike erinevate eluvald-kondade mailmakuulsatest inimestest, kes on oma unistused ellu viinud just tänu lapselikule suhtumisele. Seepärast on täiesti kindel, et selline suhtumine saab ka sinul aidata enda unistused ellu viia, üksköik mis erialal vi millised need unistused on! Loodetavasti saad sa raamatut lugedes põneva elamuse ning naudid edaspidi enda elu varasemast (veelgi) rohkem.
+Hea nõuanne või teooria on alati lühike, mitte pikk, sest pikast ja laialivalguvast teooriast ei jää meile see kõige tähtsam ja põhilisem sõnum meelde. Käesolev raamat annab sulle vaid kolmesõnalise soovituse, kuidas olla õnnelik: "Ära kasva suureks"• Raamat selgitab selle mõtte igakülgselt lahti, et sa mõistaksid täielikult seda lihtsat ja meeldejäävat sõnumit. Iga peatükk arutleb ühe konkreetse lapseliku ja täiskasvanuliku suhtumise erinevuse üle ning peatükkide lõpus on lugu maailma ajalugu muutnud inimesest, kes kõik on kasutanud lapselikku suhtumist, näiteks Robert De Niro, Abraham Lincoln, Leonardo da Vinci, Oprah, John Lennon ja Steve Jobs.
+
+Olen kogu oma teadliku elu uurinud erinevusi õnnelike ja onnetute inimeste vahel. Ma kinnitan sulle absoluutse veendumusega, et suhtumine on ainus, mis meid õnnelikuks või õnnetuks teeb. Ning see on ainult hea, sest see tähendab, et meie endi võimuses on tõsta oma õnnetset ja elu kvaliteeti. Kõik õnnelikud inimesed kasutavad kas alateadlikult või teadlikult lapselikku suhtumist.
+
+Siin raamatus on 40 näidet kõikvoimalike erinevate eluvaldkondade mailmakuulsatest inimestest, kes on oma unistused ellu viinud just tänu lapselikule suhtumisele. Seepärast on täiesti kindel, et selline suhtumine saab ka sinul aidata enda unistused ellu viia, ükskõik mis erialal või millised need unistused on! Loodetavasti saad sa raamatut lugedes põneva elamuse ning naudid edaspidi enda elu varasemast (veelgi) rohkem.
+
 Head lugemist!
 
 
-Sissejuhatus
+# Sissejuhatus
 
-Nouanne „Ara kasva suureks" ei tähenda, et sa peaksid käituma nagu laps: trampima jalgu, jonnima ja päev otsa mängima. Ei. See soovitus hölmab ainult sinu vaimset hoiakut, ellusuhtumist. Sest
-sinu suhtumine ja hoiak on põhilised, mis kujundavad sinu elu ja maäravad selle, kas sa saad olla onnelik ja täita oma unistused, või mitte.
-Täiskasvanutel on palju sellist, mida lastel veel pole. Täiskasva-nud on kogenumad, targemad, haritumad, nende vimed on igas möttes suuremad. Lapsed alles arenevad selles suunas. Kuid hooli-mata sellest, et täiskasvanud on lastest niivord palju vimekamad, ei pruugi nad olla onnelikumad, kui seda on lapsed.
-Ka üks ja sama inimene ei pruugi olla täiskasvanuna onneli-
-kum, kui ta oli seda lapsena. Muidugi ta võib olla täiskasvanuna ônnelikum, kuid samas võib ta olla ka palju palju vähem oma eluga
-rahul. See tundub paradoksaalne, et täiskasvanud, kes on niivord täiuslikud ja ülimuslikud võrreldes lastega, ei suuda ometigi onne-
-likud olla. See peaks olema meiesugustele tarkadele ja arenenutele ju lapsemäng. Aga ei ole.
+Nõuanne "Ara kasva suureks" ei tähenda, et sa peaksid käituma nagu laps: trampima jalgu, jonnima ja päev otsa mängima. Ei. See soovitus hõlmab ainult sinu vaimset hoiakut, ellusuhtumist. Sest sinu suhtumine ja hoiak on põhilised, mis kujundavad sinu elu ja määravad selle, kas sa saad olla õnnelik ja täita oma unistused, või mitte.
 
-See, mis segab meid elu nautimast ja oma täiusliku potensiali poole pürgimast, on just seesama täis kasvanulk tarkus, teadmised ja elukogemused. Köik sec, mis on täiskasvanute lastest parm, tootab meie endi vastu. Meie möistspärane suhtumine ei lase mail clu nautida ja oma unistuste täitmise poole kogu hingest püiielda, Kui täiskasvanu ärkab ilusal kevadpäeval, süs ei pruugi ta sel.
-le hommiku ilu isegi märgata. Niivord palju on kohustusi, töid ja
-probleeme, millele mõelda. On ju neid ilusaid hommikuid juba üksjagu nähtud ka.
-Kui aga laps ärkab ilusal kevadpäeval, sis môtleb ta ainult sellest, kui kaunilt päev on alanud ja mida ponevat sellise ilusa ilmaga ette voiks votta. Ta keskendub ainult hetkele ja ühele tegevusele.
-See raamat räägibki sellest, kuidas me saame köik oma kogemu-sed ja tarkused körvale jätta ja elada ainult hetkes - siin ja praegu-ning nautida täielikult oma tegevusi. Kui me suhtume lapselikult, siis oleme oma toös efektiivsemad ja samas naudime oma tegevusi palju rohkem.
-Lapselikult suhtudes lügume oma unistuste poole mängleva ker-gusega, saavutame tulemusi, mida ei uskunud end olevat võimalik saavutada ning me ei tunne mingit ängi vi lügset pingutust. Pigem on see meile nagu kerge jalutuskäik.
-Kuidas on see võimalik? Kuidas on võimalik, et ükskord peame nivord palju vaeva nägema, oleme kogu pingutuse vältel onne-
-tud ning saavutame ikkagi vaid keskpäraseid tulemusi? Samas kui teinekord teeme oma tööd loovalt, mänglevalt ning täie kohaloluga hetke nautides ning saavutame köige selle juures veel ka hiilgavaid tulemusi.
-Vastuse annavad need 40 lugu sin raamatus. Need räägivad väljapaistvate inimeste lapselikust suhtumisest. Lapselik suhtumine
-aitas Elvis Presleyl saada maailmakuulsaks, Neil Armstrongil lennata kuule, Abraham Lincolnil päästa Ameerika, Rafael Nadalil tennist mängida ning Picassol maalida. Kindlasti aitab see suhtumine ka sind, millised iganes su soovid ja unistused ka poleks.
+Täiskasvanutel on palju sellist, mida lastel veel pole. Täiskasvanud on kogenumad, targemad, haritumad, nende võimed on igas mõttes suuremad. Lapsed alles arenevad selles suunas. Kuid hoolimata sellest, et täiskasvanud on lastest niivõrd palju võimekamad, ei pruugi nad olla õnnelikumad, kui seda on lapsed.
+
+Ka üks ja sama inimene ei pruugi olla täiskasvanuna õnnelikum, kui ta oli seda lapsena. Muidugi ta võib olla täiskasvanuna õnnelikum, kuid samas võib ta olla ka palju palju vähem oma eluga rahul. See tundub paradoksaalne, et täiskasvanud, kes on niivõrd täiuslikud ja ülimuslikud võrreldes lastega, ei suuda ometigi õnnelikud olla. See peaks olema meiesugustele tarkadele ja arenenutele ju lapsemäng. Aga ei ole.
+
+See, mis segab meid elu nautimast ja oma täiusliku potentsiaali poole pürgimast, on just seesama täiskasvanulik tarkus, teadmised ja elukogemused. Kõik see, mis on täiskasvanutel lastest parem, töötab meie endi vastu. Meie mõistuspärane suhtumine ei lase meil elu nautida ja oma unistuste täitmise poole kogu hingest püüelda.
+
+Kui täiskasvanu ärkab ilusal kevadpäeval, siis ei pruugi ta selle hommiku ilu isegi märgata. Niivõrd palju on kohustusi, töid ja probleeme, millele mõelda. On ju neid ilusaid hommikuid juba üksjagu nähtud ka.
+
+Kui aga laps ärkab ilusal kevadpäeval, sis mõtleb ta ainult sellest, kui kaunilt päev on alanud ja mida põnevat sellise ilusa ilmaga ette võiks võtta. Ta keskendub ainult hetkele ja ühele tegevusele.
+
+See raamat räägibki sellest, kuidas me saame kõik oma kogemused ja tarkused kõrvale jätta ja elada ainult hetkes - siin ja praegu - ning nautida täielikult oma tegevusi. Kui me suhtume lapselikult, siis oleme oma töös efektiivsemad ja samas naudime oma tegevusi palju rohkem.
+
+Lapselikult suhtudes liigume oma unistuste poole mängleva kergusega, saavutame tulemusi, mida ei uskunud end olevat võimalik saavutada ning me ei tunne mingit ängi või liigset pingutust. Pigem on see meile nagu kerge jalutuskäik.
+
+Kuidas on see võimalik? Kuidas on võimalik, et ükskord peame nivõrd palju vaeva nägema, oleme kogu pingutuse vältel õnnetud ning saavutame ikkagi vaid keskpäraseid tulemusi? Samas kui teinekord teeme oma tööd loovalt, mänglevalt ning täie kohaloluga hetke nautides ning saavutame kõige selle juures veel ka hiilgavaid tulemusi.
+
+Vastuse annavad need 40 lugu siin raamatus. Need räägivad väljapaistvate inimeste lapselikust suhtumisest. Lapselik suhtumine aitas Elvis Presleyl saada maailmakuulsaks, Neil Armstrongil lennata kuule, Abraham Lincolnil päästa Ameerika, Rafael Nadalil tennist mängida ning Picassol maalida. Kindlasti aitab see suhtumine ka sind, millised iganes su soovid ja unistused ka poleks.
