Add the zero chapter

--- a/books/ära-kasva-suureks/0.ru.md
+++ b/books/ära-kasva-suureks/0.ru.md
@@ -1,2 +1,6 @@
 # НЕ ВЗРОСЛЕЙ
 # КАК СТАТЬ СЧАСТЛИВЫМ И ИСПОЛНИТЬ СВОИ МЕЧТЫ?
+
+## Вступление
+
+Что отличает счастливых людей от несчастных? В чем разница между людьми, которые с легкостью исполняют свои мечты, и теми, кто не исполняет их никогда? Два человека могут бок о бок делать одно и то же, однако один из них будет счастлив, а другой - нет. Один из них претворяет свои мечты в жизнь, а другой даже не приближается к их осуществлению. Причем тот, кто счастлив и успешен, может не быть умнее, образованнее, привлекательнее или каким-нибудь другим образом лучше. Суть в том, что разница между счастливыми и несчастными людьми лишь в их отношении.
