Add the zero chapter

--- a/books/ära-kasva-suureks/0.ee.md
+++ b/books/ära-kasva-suureks/0.ee.md
@@ -20,7 +20,7 @@ Siin raamatus on 40 näidet kõikvoimalike erinevate eluvaldkondade mailmakuulsa
 Head lugemist!
 
 
-# Sissejuhatus
+## Sissejuhatus
 
 Nõuanne "Ara kasva suureks" ei tähenda, et sa peaksid käituma nagu laps: trampima jalgu, jonnima ja päev otsa mängima. Ei. See soovitus hõlmab ainult sinu vaimset hoiakut, ellusuhtumist. Sest sinu suhtumine ja hoiak on põhilised, mis kujundavad sinu elu ja määravad selle, kas sa saad olla õnnelik ja täita oma unistused, või mitte.
 
