--- a/books/ära-kasva-suureks/0.ru.md
+++ b/books/ära-kasva-suureks/0.ru.md
@@ -1,6 +1,14 @@
 # НЕ ВЗРОСЛЕЙ
 # КАК СТАТЬ СЧАСТЛИВЫМ И ИСПОЛНИТЬ СВОИ МЕЧТЫ?
 
-## Вступление
+## Предисловие
 
 Что отличает счастливых людей от несчастных? В чем разница между людьми, которые с легкостью исполняют свои мечты, и теми, кто не исполняет их никогда? Два человека могут бок о бок делать одно и то же, однако один из них будет счастлив, а другой - нет. Один из них претворяет свои мечты в жизнь, а другой даже не приближается к их осуществлению. Причем тот, кто счастлив и успешен, может не быть умнее, образованнее, привлекательнее или каким-нибудь другим образом лучше. Суть в том, что разница между счастливыми и несчастными людьми лишь в их отношении.
+
+Все мы в течение жизни обращали внимание, что порой относимся к вещам лучше. Иногда все идет как по маслу. Нас словно несет своеобразный поток, при помощи которого все, что мы предпринимаем, проходит успешно. У тебя хорошее настроение, ты открыт, весел, сообразителен, полон радости и готов творить. Ты чувствуешь, что в настоящий момент абсолютно на своем месте и берешь от жизни все. 
+
+Иной раз нас будто окружает некое облако негативной энергии - все идет вкривь и вкось, мы словно настроены на неправильную волну. Все начинает казаться слишком сложным, настроение плохое, недоброжелательное и пессимистичное. Мы не в состоянии в полной мере наслаждаться моментом, рассеяны и обеспокоены.
+
+Приятного чтения!
+
+## Вступление
