Add the zero chapter

--- a/books/ära-kasva-suureks/0.ee.md
+++ b/books/ära-kasva-suureks/0.ee.md
@@ -9,7 +9,7 @@ Me kõik oleme enda elus tundnud, et mõnikord suhtume asjadesse paremini. Vahel
 
 Teinekord ümbritseks meid justkui mingi negatiivse suhtumise pilv - kõik veab viltu, oleme justkui häälestanud end valele lainele. Me kipume lihtsaid asju liialt keeruliseks mõtlema, tuju on halb, oleme vaenulikult meelestatud ning pessimistlikud. Me ei suuda täie kohaloluga hetke nautida, oleme kuidagi hajevil ja häiritud.
 
-Sellest, kuidas jõuda nii-öelda õigele lainele, kus me kogeme õnnetunnet ja liigume oma unistuste täitmise suunas, rägivad pajud enesemotiveermise raamatud. Miks siis oli vaja kirjutada veel iks raamat? Sellepärast, et minu arvates räägivad paljud õnneliku-eluraamatud väga õiget juttu, kuid enamus neist ajavad lihtsa asja liiga keeruliseks - olles mõne sellise läbi lugenud, võime loetuga küll nõus olla, kuid oleme veel suuremas segaduses, kui enne raamatu kätte võtmist. 
+Sellest, kuidas jõuda nii-öelda õigele lainele, kus me kogeme õnnetunnet ja liigume oma unistuste täitmise suunas, rägivad pajud enesemotiveermise raamatud. Miks siis oli vaja kirjutada veel üks raamat? Sellepärast, et minu arvates räägivad paljud õnneliku-eluraamatud väga õiget juttu, kuid enamus neist ajavad lihtsa asja liiga keeruliseks - olles mõne sellise läbi lugenud, võime loetuga küll nõus olla, kuid oleme veel suuremas segaduses, kui enne raamatu kätte võtmist. 
 
 Hea nõuanne või teooria on alati lühike, mitte pikk, sest pikast ja laialivalguvast teooriast ei jää meile see kõige tähtsam ja põhilisem sõnum meelde. Käesolev raamat annab sulle vaid kolmesõnalise soovituse, kuidas olla õnnelik: "Ära kasva suureks"• Raamat selgitab selle mõtte igakülgselt lahti, et sa mõistaksid täielikult seda lihtsat ja meeldejäävat sõnumit. Iga peatükk arutleb ühe konkreetse lapseliku ja täiskasvanuliku suhtumise erinevuse üle ning peatükkide lõpus on lugu maailma ajalugu muutnud inimesest, kes kõik on kasutanud lapselikku suhtumist, näiteks Robert De Niro, Abraham Lincoln, Leonardo da Vinci, Oprah, John Lennon ja Steve Jobs.
 
