--- a/books/ära-kasva-suureks/0.ru.md
+++ b/books/ära-kasva-suureks/0.ru.md
@@ -9,6 +9,8 @@
 
 Иной раз нас будто окружает некое облако негативной энергии - все идет вкривь и вкось, мы словно настроены на неправильную волну. Все начинает казаться слишком сложным, настроение плохое, недоброжелательное и пессимистичное. Мы не в состоянии в полной мере наслаждаться моментом, рассеяны и обеспокоены.
 
+Множество книг о мотивации говорят о том, как настроиться на так называемую правильную волну, стать счастливым и двигаться в направлении осуществления мечты. Зачем же тогда нужно было писать еще одну? Потому что, на мой взгляд, множество книг о счастливой жизни говорят правильные вещи, однако большинство из них описывает простые вещи слишком сложно - мы можем прочить несколько таких и, несомненно, согласиться со всем прочитанным, однако остаться в еще большем замешательстве, чем до того, как взяли книгу в руки.
+
 Приятного чтения!
 
 ## Вступление
