--- a/books/ära-kasva-suureks/0.ee.md
+++ b/books/ära-kasva-suureks/0.ee.md
@@ -11,7 +11,7 @@ Teinekord ümbritseks meid justkui mingi negatiivse suhtumise pilv - kõik veab 
 
 Sellest, kuidas jõuda nii-öelda õigele lainele, kus me kogeme õnnetunnet ja liigume oma unistuste täitmise suunas, rägivad pajud enesemotiveermise raamatud. Miks siis oli vaja kirjutada veel üks raamat? Sellepärast, et minu arvates räägivad paljud õnneliku-eluraamatud väga õiget juttu, kuid enamus neist ajavad lihtsa asja liiga keeruliseks - olles mõne sellise läbi lugenud, võime loetuga küll nõus olla, kuid oleme veel suuremas segaduses, kui enne raamatu kätte võtmist. 
 
-Hea nõuanne või teooria on alati lühike, mitte pikk, sest pikast ja laialivalguvast teooriast ei jää meile see kõige tähtsam ja põhilisem sõnum meelde. Käesolev raamat annab sulle vaid kolmesõnalise soovituse, kuidas olla õnnelik: "Ära kasva suureks"• Raamat selgitab selle mõtte igakülgselt lahti, et sa mõistaksid täielikult seda lihtsat ja meeldejäävat sõnumit. Iga peatükk arutleb ühe konkreetse lapseliku ja täiskasvanuliku suhtumise erinevuse üle ning peatükkide lõpus on lugu maailma ajalugu muutnud inimesest, kes kõik on kasutanud lapselikku suhtumist, näiteks Robert De Niro, Abraham Lincoln, Leonardo da Vinci, Oprah, John Lennon ja Steve Jobs.
+Hea nõuanne või teooria on alati lühike, mitte pikk, sest pikast ja laialivalguvast teooriast ei jää meile see kõige tähtsam ja põhilisem sõnum meelde. Käesolev raamat annab sulle vaid kolmesõnalise soovituse, kuidas olla õnnelik: "Ära kasva suureks". Raamat selgitab selle mõtte igakülgselt lahti, et sa mõistaksid täielikult seda lihtsat ja meeldejäävat sõnumit. Iga peatükk arutleb ühe konkreetse lapseliku ja täiskasvanuliku suhtumise erinevuse üle ning peatükkide lõpus on lugu maailma ajalugu muutnud inimesest, kes kõik on kasutanud lapselikku suhtumist, näiteks Robert De Niro, Abraham Lincoln, Leonardo da Vinci, Oprah, John Lennon ja Steve Jobs.
 
 Olen kogu oma teadliku elu uurinud erinevusi õnnelike ja onnetute inimeste vahel. Ma kinnitan sulle absoluutse veendumusega, et suhtumine on ainus, mis meid õnnelikuks või õnnetuks teeb. Ning see on ainult hea, sest see tähendab, et meie endi võimuses on tõsta oma õnnetset ja elu kvaliteeti. Kõik õnnelikud inimesed kasutavad kas alateadlikult või teadlikult lapselikku suhtumist.
 
