--- a/books/ära-kasva-suureks/0.ru.md
+++ b/books/ära-kasva-suureks/0.ru.md
@@ -11,6 +11,13 @@
 
 Множество книг о мотивации говорят о том, как настроиться на так называемую правильную волну, стать счастливым и двигаться в направлении осуществления мечты. Зачем же тогда нужно было писать еще одну? Потому что, на мой взгляд, множество книг о счастливой жизни говорят правильные вещи, однако большинство из них описывает простые вещи слишком сложно - мы можем прочить несколько таких и, несомненно, согласиться со всем прочитанным, однако остаться в еще большем замешательстве, чем до того, как взяли книгу в руки.
 
+Хороший совет или теория всегда отличаются краткостью, не многословностью, потому что основная мысль длинной и обширной теории плохо запоминается. Совет этой книги как стать счастливым состоит всего из двух слов: "Не взрослей". В книге эта мысль рассматривается со всех сторон, чтобы ты смог хорошо обдумать ее простой и запоминающийся посыл. Каждая глава описывает одно различие между детским и взрослый подходом, а в конце описывается история одного из изменивших мир людей, который использовал детское отношение, например Роберт Де Ниро, Авраам Линкольн, Леонардо да Винчи, Опра, Джон Леннон и Стив Джобс.
+
+Всю свою сознательную жизнь я изучал различия между счастливыми и несчастными людьми. И с абсолютной уверенностью я утверждаю, что единственное, что делает счастливым или несчастным это отношение. И это хорошо, поскольку значит, что в нашей власти увеличить свое счастье и поднять качество жизни. Все счастливые люди как бессознательно, так и осознанно применяют детское отношение.
+
+В этой книге приведены 40 примеров из жизни всемирно известных в разных сферах деятельности людей, которые смогли претворить свои мечты в жизнь только благодаря детскому отношению. Поэтому я полностью уверен, что подобное отношение сможет помочь воплотить свои мечты в жизнь и тебе, неважно какие мечты и из какой области! Надеюсь, ты получишь от прочтения этой книги удовольствие и в дальнейшем будешь (еще больше) наслаждаться жизнью.
+
 Приятного чтения!
+
 
 ## Вступление
